# django_task_sadman

./: .gitignore  API_Discovery.md  Dockerfile  Makefile  README.md  celery.py  docker-compose.yml  pyproject.toml  seed_data.py
apps/analytics/: apps.py
apps/bookings/: admin.py  apps.py  models.py
apps/bookings/management/commands/: generate_report.py
apps/bookings/migrations/: 0001_initial.py
apps/integrations/: apps.py  client.py  exceptions.py  pagination.py  renderers.py  serializers.py  sync.py  tasks.py  urls.py  views.py
config/: settings.py  urls.py
migration_script/: migration_script.py  queries.sql
tests/: test_integration_api.py  test_sync.py
